# zephyr-nanostack

./: CMakeLists.txt  Kconfig  LICENSE  README.md  note.md
include/: sample.h
src/: sample.c
src/sal-stack-nanostack/nanostack/: lol.txt  randLIB.h
src/sal-stack-nanostack/source/Core/: CMakeLists.txt
src/sal-stack-nanostack/source/Service_Libs/: CMakeLists.txt
zephyr/: module.yml
zephyr_port/include/: glue.h  zephyr_port.h
zephyr_port/source/: zephyr_port.c
